# ditherforge

./: .gitignore  LICENSE  PLAN.md  README.md  TODO.md  app.go  app_dithermodepreviews_test.go  app_test.go  build.sh  color_test.go  design.md  go.mod  go.sum  main.go  mesh_render_test.go  meshhandler.go  notes.md  panchroma_basic.txt  pyproject.toml  silhouette_test.go  wails.json
.claude/: CLAUDE.md
.github/workflows/: release.yml
cmd/cellslicer-prototype/: main.go
cmd/debug-render/: main.go
cmd/dither-thumbs/: main.go
cmd/ditherforge/: debugcells_overlay.go  debugstages.go  main.go
cmd/minislicer-prototype/: main.go
devscripts/: go.mod  go.sum
docs/: INVESTIGATION-flat-surface-holes.md  SPLIT.md  cellslicer-integration.md  output-viewer-run-state-plan.md  split-cellslicer.md  td-translucency-model.md  voxelize-clip-cleanup-plan.md
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
golang/: go.mod
internal/alphawrap/: alphawrap.go  alphawrap_test.go  cgo.go  fallback.go
internal/cacheblob/: cacheblob.go
internal/cachepolicy/: cachepolicy.go  cachepolicy_test.go
internal/cellslicer/: adjacency.go  basemesh.go  cap_seeds_test.go  cell.go  celltrace.go  classify_test.go  clip.go  clip2d.go  (+45 more)
objects/: Makefile  README.md  source.md
scripts/: alpha_wrap.py  fix_mesh.py  flatten_orca_profiles.py  reduce_texture.py
tests/: README.md  cell_merge_equiv_test.go  color_test.go  mesh_render_test.go  sampled_match_input_test.go  silhouette.py  test_silhouette.py
(+490 files in other folders)
